设计模式的一些补充